# NDI-for-Android

./: .gitignore  AGENTS.md  CLAUDE.md  DOCUMENTATION-INDEX.md  NdiForAndroid.sln  build.gradle.kts  gradle.properties  settings.gradle.kts  version.properties  window_dump_live.xml  window_dump_pr82.xml
.github/: KNOWLEDGE-BASE.md  PULL_REQUEST_TEMPLATE.md
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
docs/: 006-settings-menu-release-notes.md  README.md  android-prerequisites.md  architecture.md  constitution.md  dual-emulator-setup.md  ndi-feature.md  ndi-sdk-coverage.md  testing.md  troubleshooting-installation.md
gradle/: libs.versions.toml
ndi/sdk-bridge/src/main/cpp/: CMakeLists.txt  ndi_bridge.cpp  ndi_screen_share.cpp
scripts/: init-gradle-wrapper.ps1  inject-discovery-server.py  ndi-windows-discovery-check.py  test-e2e-failures.ps1  test-error-handling.ps1  test-install-functions.ps1  test-integration.ps1  test-performance.ps1  test-retry-logic.ps1  test-timeout.ps1  verify-android-prereqs.ps1  verify-e2e-dual-emulator-prereqs.ps1
test-results/: 015-view-screen-controls-validation.md  016-theme-editor-validation.md  018-manage-discovery-servers-preflight.md  018-manage-discovery-servers-validation.md  019-settings-three-pane-preflight.md  019-settings-three-pane-validation.md  020-optimize-stream-playback-preflight.md  020-optimize-stream-playback-validation.md  020-us1-viewer-regression.md  020-us2-viewer-regression.md  020-us3-viewer-regression.md  021-server-correlation-checklist-20260329.md  021-us1-playwright-regression.md  (+115 more)
(+978 files in other folders)
